--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Ian Gray</title>
@@ -31,7 +26,7 @@
 						<header class="major">
 							<h2>What I do<br /></h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I capture, analyze, and action data. I deploy systems to solve business problems and improve performance. I support teams to achieve their own success.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -44,7 +39,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Journal Contribution - Cambodian Journal of Natural History (2022)</h3>
-								<p>Performed statistical analysis of data set for baseline survey of H. Kuda seahorses in the Preah Sihanouk province of Cambodia.</p>
+								<p>Performed statistical analysis of data for baseline survey of H. Kuda seahorses in the Preah Sihanouk province of Cambodia.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -54,27 +49,9 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Oracle Netsuite ERP deployment - Horseware (2022)</h3>
-								<p>Managed local deployment, business process adaption, and training for transition to Oracle Netsuite ERP, WMS, and MRP systems.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Managed User Access Testing (UAT), local deployment, business process adaption and training for transition to Oracle Netsuite ERP, WMS, and MRP systems.</p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
 
 					<!-- Three -->
@@ -85,7 +62,7 @@
 							<h3>Skills</h3>
 							<ul>
 								<li><strong>Programming:</strong> Python, R, VBA, HTML, PHP, CSS, Javascript, C++</li>
-								<li><strong>Analytics:</strong> Excel, PowerBI, Weka, R Studio, RapidMiner, Azure Synapse</li>
+								<li><strong>Analytics:</strong> Excel, PowerBI, Weka, R Studio, RapidMiner, MS Azure</li>
 							</ul>
 							<h3>Qualifications</h3>
 							<ul>
@@ -448,13 +425,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="twitter.com/theiangray" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="github.com/theiangray" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:ian@grayburns.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</footer>
