Update contact methods

--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="twitter.com/theiangray" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="github.com/theiangray" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="http://twitter.com/theiangray" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="http://github.com/theiangray" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:ian@grayburns.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
