Updated work history details

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                     <p>12/2020 - Present</p>
                     <ul>
                         <li>Implementation of Oracle ERP and WMS in Cambodia to improve business process efficiency and enhance supply chain transparency.
-                            Planned and managed a project to upgrade production with an automated unit production system for material handling, obtaining a 20% productivity gain across rug product ranges.
-                            Created dashboards and reports using PowerBI, R, Excel, and PowerPoint to monitor and evaluate operational metrics.
-                            Performed regular quantitative analysis to allow production departments to make more informed decisions.</li>
+                            <br>Planned and managed a project to upgrade production with an automated unit production system for material handling, obtaining a 20% productivity gain across rug product ranges.
+                            <br>Created dashboards and reports using PowerBI, R, Excel, and PowerPoint to monitor and evaluate operational metrics.
+                            <br>Performed regular quantitative analysis to allow production departments to make more informed decisions.</li>
                     </ul>
                 </li>
                 <li>
@@ -167,8 +167,11 @@
                     <p>05/2016 - 12/2020</p>
                     <ul>
                         <li>Responsible for organisation wide operations. 
-                            Provided guidance and leadership to approximately 100 staff concurrently during various project phases. Effective and immediate crisis response and management. 
-                            Comprehensive reporting and record keeping. Built organisational resilience through development of an integrated management system.</li>
+                            <br>Evaluated, restructured and reformed under-performing services branch within 12 months to increase net profits by $200,000.
+                            <br>Provided support and leadership to multi-disciplinary team of approximately 100 staff across all projects.
+                            <br>Built organisational resilience and business continuity through development of an integrated management system aligned.
+                            <br>Developed and maintained policies and operational documents to ISO standards.
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -176,10 +179,10 @@
                     <h4>Pal-Tech Services, Townsville, Australia</h4>
                     <p>09/2013 - 05/2016</p>
                     <ul>
-                        <li>Managed a range of projects across telecommunications, gas, civil construction, and 
-                            electrical sectors. Met key performance indicators and other designated performance metrics 
-                            successfully. Coordinated training and communications across projects, and assisted with 
-                            procurement, workforce planning, budgeting, and policy development.</li>
+                        <li>Managed a range of projects across telecommunications, gas, civil construction, and electrical sectors. 
+                            <br>Developed internal workforce planning tool using VBA resulting in 26% reduction in average construction project duration.
+                            <br>Mapped technical processes and deployed these as standard across all project teams to improve consistency and quality of services.
+                            <br>Coordinated training and communications across projects, and assisted with procurement, health and safety, budgeting, and policy development.</li>
                     </ul>
                 </li>
                 <li>
