Change dates to avoid ios phone number detection

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -126,7 +125,7 @@
             <h2>Info</h2>
             <p>
                 As a systems analyst I draw upon my generalist knowledge to map the environment and identify opportunities. 
-                Achieveable solutions are planned and developed with SME input and data analysis to support decisions.
+                Achieveable solutions are planned and developed with subject matter expert input and data analysis to support decisions.
                 My servant leadership style builds team capability to ensure projects are completed on time and on budget.
             </p>
             <img src="./images/profile.png" alt="A picture of myself" loading="lazy"
@@ -153,42 +152,41 @@
                 <li>
                     <h3>Systems Analyst</h3>
                     <h4>Horseware Ireland, Sihanoukville, Cambodia</h4>
-                    <p>12/2020 - Present</p>
+                    <a href="#"><p>12/2020 - Present</p></a>
                     <ul>
-                        <li>Implementation of Oracle ERP and WMS in Cambodia to improve business process efficiency and enhance supply chain transparency.
-                            <br>Planned and managed a project to upgrade production with an automated unit production system for material handling, obtaining a 20% productivity gain across rug product ranges.
-                            <br>Created dashboards and reports using PowerBI, R, Excel, and PowerPoint to monitor and evaluate operational metrics.
-                            <br>Performed regular quantitative analysis to allow production departments to make more informed decisions.</li>
+                        <li>Implementation of Oracle ERP and WMS in Cambodia to improve business process efficiency and enhance supply chain transparency.</li>
+                        <li>Planned and managed a project to upgrade production with an automated unit production system for material handling, obtaining a 20% productivity gain across rug product ranges.</li>
+                        <li>Created dashboards and reports using PowerBI, R, Excel, and PowerPoint to monitor and evaluate operational metrics.</li>
+                        <li>Performed regular quantitative analysis to allow production departments to make more informed decisions.</li>
                     </ul>
                 </li>
                 <li>
                     <h3>Operations and Corporate Services Manager</h3>
                     <h4>Pal-Tech Services, Cairns, Australia</h4>
-                    <p>05/2016 - 12/2020</p>
+                    <a href="#"><p>05/2016 - 12/2020</p></a>
                     <ul>
-                        <li>Responsible for organisation wide operations. 
-                            <br>Evaluated, restructured and reformed under-performing services branch within 12 months to increase net profits by $200,000.
-                            <br>Provided support and leadership to multi-disciplinary team of approximately 100 staff across all projects.
-                            <br>Built organisational resilience and business continuity through development of an integrated management system aligned.
-                            <br>Developed and maintained policies and operational documents to ISO standards.
+                        <li>Evaluated, restructured and reformed under-performing services branch within 12 months to increase net profits by $200,000.</li>
+                        <li>Provided support and leadership to multi-disciplinary team of approximately 100 staff across all projects.</li>
+                        <li>Built organisational resilience and business continuity through development of an integrated management system aligned.</li>
+                        <li>Developed and maintained policies and operational documents to ISO standards.</li>
                         </li>
                     </ul>
                 </li>
                 <li>
                     <h3>Project Manager</h3>
                     <h4>Pal-Tech Services, Townsville, Australia</h4>
-                    <p>09/2013 - 05/2016</p>
+                   <a href="#"><p>09/2013 - 05/2016</p></a>
                     <ul>
-                        <li>Managed a range of projects across telecommunications, gas, civil construction, and electrical sectors. 
-                            <br>Developed internal workforce planning tool using VBA resulting in 26% reduction in average construction project duration.
-                            <br>Mapped technical processes and deployed these as standard across all project teams to improve consistency and quality of services.
-                            <br>Coordinated training and communications across projects, and assisted with procurement, health and safety, budgeting, and policy development.</li>
+                        <li>Managed a range of projects across telecommunications, gas, civil construction, and electrical sectors.</li>
+                        <li>Developed internal workforce planning tool using VBA resulting in 26% reduction in average construction project duration.</li>
+                        <li>Mapped technical processes and deployed these as standard across all project teams to improve consistency and quality of services.</li>
+                        <li>Coordinated training and communications across projects, and assisted with procurement, health and safety, budgeting, and policy development.</li>
                     </ul>
                 </li>
                 <li>
                     <h3>Field Service Technician</h3>
                     <h4>Pal-Tech Services, Townsville, Australia</h4>
-                    <p>07/2009 - 09/2013</p>
+                    <a href="#"><p>07/2009 - 09/2013</p></a>
                     <ul>
                         <li>Diagnosed and repaired electronic and electromechanical equipment 
                             including industrial process controllers, cash handling machines, enterprise grade IT, 
@@ -230,7 +228,6 @@
         </div>
         <div class="legal">
             <p>© 2023 Ian Gray</p>
-            <p>Icons: © 2023 Fonticons, Inc.</p>
             <p><a href="https://grayburns.com/legal">Imprint</a></p>
         </div>
     </div>
