Adjust work experience descriptions

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             max-width: 100%;
         }
 
+        a {
+            text-decoration: none;
+            color: #000;
+        }
+
         .container {
             max-width: 600px;
             margin: 0 auto;
@@ -128,7 +133,7 @@
                 Achieveable solutions are planned and developed with subject matter expert input and data analysis to support decisions.
                 My servant leadership style builds team capability to ensure projects are completed on time and on budget.
             </p>
-            <img src="./images/profile.png" alt="A picture of myself" loading="lazy"
+            <img src="./images/profile.png" alt="A picture of me" loading="lazy"
                 title="That's how I look like in real life!">
         </div>
         <div class="skills">
@@ -152,7 +157,7 @@
                 <li>
                     <h3>Systems Analyst</h3>
                     <h4>Horseware Ireland, Sihanoukville, Cambodia</h4>
-                    <a href="#"><p>12/2020 - Present</p></a>
+                    <p>12/2020 - Present</p>
                     <ul>
                         <li>Implementation of Oracle ERP and WMS in Cambodia to improve business process efficiency and enhance supply chain transparency.</li>
                         <li>Planned and managed a project to upgrade production with an automated unit production system for material handling, obtaining a 20% productivity gain across rug product ranges.</li>
@@ -163,7 +168,7 @@
                 <li>
                     <h3>Operations and Corporate Services Manager</h3>
                     <h4>Pal-Tech Services, Cairns, Australia</h4>
-                    <a href="#"><p>05/2016 - 12/2020</p></a>
+                    <p>05/2016 - 12/2020</p>
                     <ul>
                         <li>Evaluated, restructured and reformed under-performing services branch within 12 months to increase net profits by $200,000.</li>
                         <li>Provided support and leadership to multi-disciplinary team of approximately 100 staff across all projects.</li>
@@ -175,7 +180,7 @@
                 <li>
                     <h3>Project Manager</h3>
                     <h4>Pal-Tech Services, Townsville, Australia</h4>
-                   <a href="#"><p>09/2013 - 05/2016</p></a>
+                    <p>09/2013 - 05/2016</p>
                     <ul>
                         <li>Managed a range of projects across telecommunications, gas, civil construction, and electrical sectors.</li>
                         <li>Developed internal workforce planning tool using VBA resulting in 26% reduction in average construction project duration.</li>
@@ -186,11 +191,11 @@
                 <li>
                     <h3>Field Service Technician</h3>
                     <h4>Pal-Tech Services, Townsville, Australia</h4>
-                    <a href="#"><p>07/2009 - 09/2013</p></a>
+                    <p>07/2009 - 09/2013</p>
                     <ul>
                         <li>Diagnosed and repaired electronic and electromechanical equipment 
                             including industrial process controllers, cash handling machines, enterprise grade IT, 
-                            and distribution network fibre, copper, and microwave communications hardware./li>
+                            and distribution network fibre, copper, and microwave communications hardware.</li>
                     </ul>
                 </li>
             </ul>
