Add languages, certificates, publications

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
         a {
             text-decoration: none;
-            color: #000;
         }
 
         .container {
@@ -90,6 +89,15 @@
         .experience ul li h4 {
             margin-bottom: 5px;
             color: #999;
+        }
+
+        .education ul li h4 {
+            margin-bottom: 5px;
+            color: #999;
+        }
+
+        .additional ul li h4 {
+            color: #666;
         }
 
         .legal {
@@ -199,6 +207,8 @@
                     </ul>
                 </li>
             </ul>
+        </div>
+        <div class="education">
             <h2>Education</h2>
             <ul>
                 <li>
@@ -220,7 +230,7 @@
                     </ul>
                 </li>
                 <li>
-                    <h3>Certificate III in Telecommunications (ACMA licensed)</h3>
+                    <h3>Certificate III in Telecommunications</h3>
                     <h4>Conquest Communications, Rockhampton, Australia</h4>
                     <p>2014</p>
                     <ul>
@@ -228,6 +238,35 @@
                             Endorsed for optical fiber, telephony, coaxial, and structured cabling.
                         </li>
                     </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="skills">
+            <h2>Languages</h2>
+            <ul>
+                <li>English (Native)</li>
+                <li>Khmer (B1 Advanced)</li>
+                <li>Indonesian (A2 Intermediate)</li>
+            </ul>
+        </div>
+        <div class="additional">
+            <h2>Certifications</h2>
+            <ul>
+                <li>
+                    <h3>Google Data Analytics</h3>
+                    <h4>Credential ID 4826AYW4GEYK</h4>
+                    <p><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/4826AYW4GEYK">View certificate</a></p>
+                </li>
+                <li>
+                    <h3>Leading Change in Times of Disruption u.lab (MITx) </h3>
+                    <h4>Credential ID af41f66545f649c088b0a339f0045c9f</h4>
+                    <p><a href="https://courses.edx.org/certificates/af41f66545f649c088b0a339f0045c9f">View certificate</a></p>
+                </li>
+            </ul>
+            <h2>Publications</h2>
+            <ul>
+                <li>
+                    <p>Kalisiak, J., Gray, I., Bruget, R. & M. Correia (2022) <i>"The use of non-invasive sampling to estimate long-term abundance of Hippocampus kuda in the Koh Sdach Archipelago, Cambodia"</i>, Cambodian Journal of Natural History, 1:47-58</h3>
                 </li>
             </ul>
         </div>
