--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             margin: 20px 0 10px;
         }
 
+        h3 {
+            margin: 20px 0 5px;
+        }
+
+        h4 {
+            margin: 5px 0 5px;
+        }
+
         p {
             margin: 0 0 10px;
         }
@@ -83,21 +91,16 @@
         }
 
         .experience ul li h3 {
-            margin-bottom: 10px;
-        }
-
-        .experience ul li h4 {
-            margin-bottom: 5px;
-            color: #999;
+            color: #00008B;
         }
 
         .education ul li h4 {
             margin-bottom: 5px;
-            color: #999;
+            color: #00008B;
         }
 
         .additional ul li h4 {
-            color: #666;
+            color: #00008B;
         }
 
         .legal {
@@ -112,7 +115,7 @@
     <div class="container">
         <div class="header">
             <h1>Ian Gray</h1>
-            <h2>Systems Analyst</h2>
+            <h2>Systems and Data Analyst</h2>
         </div>
         <div class="contact">
             <ul>
@@ -137,7 +140,7 @@
         <div class="info">
             <h2>Info</h2>
             <p>
-                As a systems analyst I draw upon my generalist knowledge to map the environment and identify opportunities. 
+                As an analyst I draw upon my generalist knowledge to map the environment and identify opportunities. 
                 Achieveable solutions are planned and developed with subject matter expert input and data analysis to support decisions.
                 My servant leadership style builds team capability to ensure projects are completed on time and on budget.
             </p>
