Update diploma section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </li>
                 <li>
                     <h3>Diploma of Business (RPL)</h3>
-                    <h4>Scope Training, Perth, Western Australia</h4>
+                    <h4>Scope Training, Perth, Australia</h4>
                     <p>2019</p>
                     <ul>
                         <li>Received recognition of prior learning (RPL) for my work in project and operations management</li>
