change profile image to webp

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 Achieveable solutions are planned and developed with subject matter expert input and data analysis to support decisions.
                 My servant leadership style builds team capability to ensure projects are completed on time and on budget.
             </p>
-            <img src="./images/profile.png" alt="A picture of me" loading="lazy"
+            <img src="./images/profile.webp" alt="A picture of me" loading="lazy"
                 title="That's how I look like in real life!">
         </div>
         <div class="skills">
