change info section wording

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <p>
                 As an analyst I draw upon my generalist knowledge to map the environment and identify opportunities. 
                 Achieveable solutions are planned and developed with subject matter expert input and data analysis to support decisions.
-                My servant leadership style builds team capability to ensure projects are completed on time and on budget.
+                My servant leadership style builds team capability to ensure projects are completed on time and within budget.
             </p>
             <img src="./images/profile.webp" alt="A picture of me" loading="lazy"
                 title="That's how I look like in real life!">
