--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="canonical" href="https://grayburns.com">
-    <title>Ian Gray - Systems Analyst</title>
+    <title>Ian Gray - Systems & Data Analyst</title>
     <style>
         body {
             font-family: sans-serif;
