Update index.html with new title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="canonical" href="https://grayburns.com">
-    <title>Ian Gray - Systems & Data Analyst</title>
+    <title>Ian Gray</title>
     <style>
         body {
             font-family: sans-serif;
@@ -115,7 +115,7 @@
     <div class="container">
         <div class="header">
             <h1>Ian Gray</h1>
-            <h2>Systems and Data Analyst</h2>
+            <h2>Analyst</h2>
         </div>
         <div class="contact">
             <ul>
